# FastAPI_back

./: Readme.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 904e2c114e28_.py  a318666213ce_.py  c163559d6de8_.py
api/: courses.py  sections.py  users.py
api/utils/: course.py  user.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py  user.py
